--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
                         <p><b>Popolitain</b> est extrèment beau</p>
                         <small class="text-muted">Il y a maintenant</small>
                     </div>
+                    <div class="profile-photo">
+                        <img src="assets\images\giphy.gif">
+                    </div>
+                    <div class="message">
+                        <p><b>Zentrax</b> est extrèment beau</p>
+                        <small class="text-muted">Il y a maintenant</small>
+                    </div>
                 </div>
                 
                 
