--- a/archive.html
+++ b/archive.html
@@ -7,6 +7,8 @@
     <title>STC - Acceuil</title>
     <!-- -->
 
+    <link rel="icon" href="./assets/images/giphy.gif" />
+
     <!--StyleSheet-->
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="archives.css">
