--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="Style.css">
     <!-- Material Icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
+
+    <link rel="icon" href="./assets/images/giphy.gif" />
 </head>
 
 <body>
